--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vapor-store",
-  "version": "1.5.4",
+  "version": "1.5.6",
   "description": "Vapor Store",
   "homepage": "",
   "main": "assets/electron/app.js",
@@ -14,7 +14,7 @@
     "asar": true,
     "files": [
       "**/*",
-      "!node_modules/puppeteer/.local-chromium${/*}"
+      "!node_modules/puppeteer/.local-chromium/linux-756035${/*}"
     ],
     "nsis": {
       "oneClick": false,
