--- a/package.json
+++ b/package.json
@@ -19,8 +19,20 @@
   },
   "homepage": "https://github.com/ruslang02/electron-mdc-quick-start#readme",
   "dependencies": {
-    "material-components-web": "^0.35.2",
+    "@material/feature-targeting": "^8.0.0",
+    "@material/linear-progress": "^8.0.0",
+    "@material/theme": "^8.0.0",
+    "fs": "0.0.1-security",
+    "glasstron": "git+https://github.com/AryToNeX/Glasstron.git",
+    "jquery": "^3.5.1",
+    "lozad": "^1.16.0",
+    "material-components-web": "^7.0.0",
     "material-design-icons-webfont": "^1.0.0",
-    "sass": "^1.6.2"
+    "sass": "^1.6.2",
+    "steamgriddb": "^1.4.0"
+  },
+  "devDependencies": {
+    "electron": "^4.0.5",
+    "electron-reload": "^1.5.0"
   }
 }
