--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "steamgriddb": "^1.4.0"
   },
   "devDependencies": {
-    "electron": "^4.0.5",
+    "electron": ">=7.2.4",
     "electron-reload": "^1.5.0"
   }
 }
