--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -15,6 +15,8 @@ jobs:
           node-version: 12
       - run: npm ci
       - run: npm run build
+        env:
+         NODE_AUTH_TOKEN: ${{secrets.npm_token}}
 
   publish-npm:
     needs: build
