--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vapor-store-2",
-  "version": "2.0.0",
+  "version": "PRE-2.0.0",
   "description": "Vapor Store",
   "main": "app.js",
   "scripts": {
