--- a/.github/workflows/auto-build.yml
+++ b/.github/workflows/auto-build.yml
@@ -26,6 +26,7 @@ jobs:
           # (No need to define this secret in the repo settings)
           github_token: ${{ secrets.github_token }}
           skip_build: true
+          args: "-p always"
           # If the commit is tagged with a version (e.g. "v1.0.0"),
           # release the app after building
           release: $(date +'%Y-%m-%d')
