--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vapor-store-2",
-  "version": "2.0.1-beta",
+  "name": "vapor-store",
+  "version": "2.0.0-beta",
   "description": "Vapor Store",
   "author": "SushyDev",
   "main": "app.js",
