--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vapor-store",
-  "version": "2.0.0-beta-2",
+  "version": "2.0.0-beta-",
   "description": "Vapor Store",
   "author": "SushyDev",
   "main": "app.js",
@@ -29,7 +29,7 @@
     }],
     "files": [
       "**/*",
-      "!**/node_modules/puppeteer/**/*",
+      "!**/node_modules/puppeteer/linux-756035${/*}",
       "app/json/*"
     ],
     "nsis": {
