--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vapor-store",
-  "version": "2.0.0-beta-",
+  "version": "2.0.0-beta-2",
   "description": "Vapor Store",
   "author": "SushyDev",
   "main": "app.js",
