--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vapor-store",
-  "version": "2.0.0-beta-2",
+  "version": "2.0.0-beta-3",
   "description": "Vapor Store",
   "author": "SushyDev",
   "main": "app.js",
@@ -48,6 +48,7 @@
     "@material/linear-progress": "^8.0.0",
     "@material/progress-indicator": "^8.0.0",
     "@material/ripple": "^8.0.0",
+    "@material/switch": "^8.0.0",
     "@material/theme": "^8.0.0",
     "electron-dl": "^3.0.2",
     "extract-zip": "^2.0.1",
