Fixed in app updates

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vapor-store",
-  "version": "2.0.0-beta-4",
+  "version": "2.0.0-beta-3",
   "description": "Vapor Store",
   "author": "SushyDev",
   "main": "app.js",
@@ -21,12 +21,14 @@
     "appId": "vapor.store",
     "productName": "Vapor Store",
     "asar": true,
-    "publish": [{
-      "provider": "github",
-      "owner": "SushyDev",
-      "repo": "vapor-store",
-      "releaseType": "prerelease"
-    }],
+    "publish": [
+      {
+        "provider": "github",
+        "owner": "SushyDev",
+        "repo": "vapor-store",
+        "releaseType": "prerelease"
+      }
+    ],
     "files": [
       "**/*",
       "!**/node_modules/puppeteer/linux-756035/**/*",
@@ -58,6 +60,8 @@
     "material-components-web": "^7.0.0",
     "material-design-icons-webfont": "^1.0.0",
     "puppeteer": "3.3.0",
+    "puppeteer-core": "^5.5.0",
+    "puppeteer-electron": "0.0.10",
     "request": "^2.88.2",
     "sass": "^1.6.2",
     "steamgriddb": "^1.4.0"
