--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vapor-store",
-  "version": "2.0.0-beta-11",
+  "version": "2.0.0-beta-12",
   "description": "Vapor Store",
   "author": "SushyDev",
   "main": "app.js",
@@ -52,6 +52,7 @@
     "@material/ripple": "^8.0.0",
     "@material/switch": "^8.0.0",
     "@material/theme": "^8.0.0",
+    "create-desktop-shortcuts": "^1.2.0",
     "electron-dl": "^3.0.2",
     "extract-zip": "^2.0.1",
     "fs": "0.0.1-security",
