--- a/package.json
+++ b/package.json
@@ -21,19 +21,21 @@
     "appId": "vapor.store",
     "productName": "Vapor Store",
     "asar": true,
-    "publish": [
-      {
-        "provider": "github",
-        "owner": "SushyDev",
-        "repo": "vapor-store",
-        "releaseType": "prerelease"
-      }
-    ],
+    "publish": [{
+      "provider": "github",
+      "owner": "SushyDev",
+      "repo": "vapor-store",
+      "releaseType": "prerelease"
+    }],
     "files": [
       "**/*",
       "!**/node_modules/puppeteer/linux-756035/**/*",
       "app/json/*"
     ],
+    "extraResources": [{
+      "from": "node_modules/create-desktop-shortcuts/windows.vbs",
+      "to": "app"
+    }],
     "nsis": {
       "oneClick": false,
       "perMachine": false,
