--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "homepage": "https://github.com/SushyDev/vapor-store",
   "scripts": {
     "build": "electron-builder -w",
-    "start": "APP_DEV=true electron ."
+    "start": "electron . APP_DEV=true"
   },
   "repository": {
     "type": "git",
@@ -21,21 +21,25 @@
     "appId": "vapor.store",
     "productName": "Vapor Store",
     "asar": true,
-    "publish": [{
-      "provider": "github",
-      "owner": "SushyDev",
-      "repo": "vapor-store",
-      "releaseType": "prerelease"
-    }],
+    "publish": [
+      {
+        "provider": "github",
+        "owner": "SushyDev",
+        "repo": "vapor-store",
+        "releaseType": "prerelease"
+      }
+    ],
     "files": [
       "**/*",
       "!**/node_modules/puppeteer/linux-756035/**/*",
       "app/json/*"
     ],
-    "extraResources": [{
-      "from": "node_modules/create-desktop-shortcuts/windows.vbs",
-      "to": "app"
-    }],
+    "extraResources": [
+      {
+        "from": "node_modules/create-desktop-shortcuts/windows.vbs",
+        "to": "app"
+      }
+    ],
     "nsis": {
       "oneClick": false,
       "perMachine": false,
@@ -65,7 +69,7 @@
     "steamgriddb": "^1.4.0"
   },
   "devDependencies": {
-    "electron": ">=7.2.4",
+    "electron": "^7.2.4",
     "electron-builder": "^22.9.1",
     "electron-reload": "^1.5.0"
   }
