--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "homepage": "https://github.com/SushyDev/vapor-store",
   "scripts": {
     "build": "electron-builder -w",
-    "start": "electron . APP_DEV=true"
+    "start": "electron ."
   },
   "repository": {
     "type": "git",
@@ -36,8 +36,8 @@
     ],
     "extraResources": [
       {
-        "from": "node_modules/create-desktop-shortcuts/windows.vbs",
-        "to": "app"
+        "from": "app/libraries/create-desktop-shortcuts/src/windows.vbs",
+        "to": "app.asar.unpacked/node_modules/create-desktop-shortcuts/src/windows.vbs"
       }
     ],
     "nsis": {
@@ -58,8 +58,8 @@
     "@material/ripple": "^8.0.0",
     "@material/switch": "^8.0.0",
     "@material/theme": "^8.0.0",
-    "create-desktop-shortcuts": "^1.2.0",
     "electron-dl": "^3.0.2",
+    "electron-is-dev": "^1.2.0",
     "extract-zip": "^2.0.1",
     "fs": "0.0.1-security",
     "jquery": "^3.5.1",
