--- a/.github/workflows/auto-build.yml
+++ b/.github/workflows/auto-build.yml
@@ -1,7 +1,9 @@
 name: Build/release
 
-on: push
-
+on:
+  push:
+    paths:
+      - 'package.json'
 jobs:
   release:
     runs-on: ${{ matrix.os }}
