--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vapor-store",
-  "version": "2.0.0-beta-16",
+  "version": "2.0.0-beta-17",
   "description": "Vapor Store",
   "author": "SushyDev",
   "main": "app.js",
@@ -21,21 +21,25 @@
     "appId": "vapor.store",
     "productName": "Vapor Store",
     "asar": true,
-    "publish": [{
-      "provider": "github",
-      "owner": "SushyDev",
-      "repo": "vapor-store",
-      "releaseType": "prerelease"
-    }],
+    "publish": [
+      {
+        "provider": "github",
+        "owner": "SushyDev",
+        "repo": "vapor-store",
+        "releaseType": "prerelease"
+      }
+    ],
     "files": [
       "**/*",
       "!**/node_modules/puppeteer/linux-756035/**/*",
       "app/scss/*"
     ],
-    "extraResources": [{
-      "from": "app/libraries/create-desktop-shortcuts/src/windows.vbs",
-      "to": "app.asar.unpacked/node_modules/create-desktop-shortcuts/src/windows.vbs"
-    }],
+    "extraResources": [
+      {
+        "from": "app/libraries/create-desktop-shortcuts/src/windows.vbs",
+        "to": "app.asar.unpacked/node_modules/create-desktop-shortcuts/src/windows.vbs"
+      }
+    ],
     "nsis": {
       "oneClick": false,
       "perMachine": false,
