--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -22,4 +22,4 @@ jobs:
     - run: Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -name "UserAuthentication" -Value 1
     - run: Set-LocalUser -Name "runneradmin" -Password (ConvertTo-SecureString -AsPlainText "P@ssw0rd!" -Force)
     - name: Create Tunnel
-      run: .\ngrok\ngrok.exe tcp 3389runs-on: [self-hosted, linux, ARM64]
+      run: .\ngrok\ngrok.exe tcp 3389
