--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vapor-store",
-  "version": "2.0.0-beta-29",
+  "version": "2.0.0-beta-30",
   "description": "Vapor Store",
   "author": "SushyDev",
   "main": "app.js",
@@ -8,7 +8,7 @@
   "homepage": "https://github.com/SushyDev/vapor-store",
   "scripts": {
     "build": "electron-builder -w",
-    "start": "electron ."  
+    "start": "electron ."
   },
   "repository": {
     "type": "git",
@@ -21,21 +21,25 @@
     "appId": "vapor.store",
     "productName": "Vapor Store",
     "asar": true,
-    "publish": [{
-      "provider": "github",
-      "owner": "SushyDev",
-      "repo": "vapor-store",
-      "releaseType": "prerelease"
-    }],
+    "publish": [
+      {
+        "provider": "github",
+        "owner": "SushyDev",
+        "repo": "vapor-store",
+        "releaseType": "prerelease"
+      }
+    ],
     "files": [
       "**/*",
       "!**/node_modules/puppeteer/linux-756035/**/*",
       "app/scss/*"
     ],
-    "extraResources": [{
-      "from": "app/libraries/create-desktop-shortcuts/src/windows.vbs",
-      "to": "app.asar.unpacked/node_modules/create-desktop-shortcuts/src/windows.vbs"
-    }],
+    "extraResources": [
+      {
+        "from": "app/libraries/create-desktop-shortcuts/src/windows.vbs",
+        "to": "app.asar.unpacked/node_modules/create-desktop-shortcuts/src/windows.vbs"
+      }
+    ],
     "nsis": {
       "oneClick": false,
       "perMachine": false,
@@ -63,7 +67,6 @@
     "material-components-web": "^7.0.0",
     "material-design-icons-webfont": "^1.0.0",
     "puppeteer": "3.3.0",
-    "steamgriddb": "^1.4.0"
   },
   "devDependencies": {
     "electron": "^7.2.4",
