--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "jquery": "^3.5.1",
     "material-components-web": "^7.0.0",
     "material-design-icons-webfont": "^1.0.0",
-    "puppeteer": "3.3.0",
+    "puppeteer": "3.3.0"
   },
   "devDependencies": {
     "electron": "^7.2.4",
