--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vapor-store",
-  "version": "2.0.0-beta-32",
+  "version": "2.0.0-beta-33",
   "description": "Vapor Store",
   "author": "SushyDev",
   "main": "app.js",
@@ -25,7 +25,7 @@
       {
         "provider": "github",
         "owner": "SushyDev",
-        "repo": "vapor-store", 
+        "repo": "vapor-store",
         "releaseType": "prerelease"
       }
     ],
@@ -63,6 +63,7 @@
     "electron-is-dev": "^1.2.0",
     "extract-zip": "^2.0.1",
     "fs": "0.0.1-security",
+    "humid": "^0.3.0",
     "jquery": "^3.5.1",
     "material-components-web": "^7.0.0",
     "material-design-icons-webfont": "^1.0.0",
