--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vapor-store",
-  "version": "2.0.0-beta-39",
+  "version": "2.0.0-alpha-1",
   "description": "Vapor Store",
   "author": "SushyDev",
   "main": "app.js",
