--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "parcel site/html/*.html",
+    "start": "parcel site/html/index.html",
     "build": "parcel build site/html/*.html --out-dir docs --public-url ./"
   },
   "keywords": [],
