--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "electron-dl": "^3.2.1",
     "fs": "^0.0.1-security",
+    "node-downloader-helper": "^1.0.17",
     "puppeteer": "^8.0.0",
     "puppeteer-core": "^8.0.0",
     "puppeteer-in-electron": "^3.0.3",
