--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,7 +33,7 @@
     "src/**/*.vue",
     "tests/**/*.ts",
     "tests/**/*.tsx"
-, "src/downloader/helper.js"  ],
+, "src/downloader/helper.js", "src/views/categories.js"  ],
   "exclude": [
     "node_modules"
   ]
